//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  username String
  avatar String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  active Boolean [not null, default: true]
  config Config
  favorites Favorite [not null]
  attempts Attempt [not null]
  feedbacks Feedback [not null]
  role Role [not null, default: 'USER']
}

Table Config {
  id String [pk]
  files String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Test {
  id String [pk]
  title String [not null]
  score Int [not null]
  duration Int [not null]
  image String [not null]
  audio String [not null]
  answer String [not null]
  numberOfQuestions Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [not null, default: false]
  testCategory TestCategory [not null]
  testSkill TestSkill [not null]
  attempts Attempt [not null]
  testSource TestSource [not null]
  testSourceId String [not null]
  favorite Favorite
  feedback Feedback
}

Table TestSource {
  id String [pk]
  name String [unique, not null]
  tests Test [not null]
}

Table Attempt {
  id String [pk]
  score Int [not null]
  answer String [not null]
  status AttemptStatus [not null, default: 'NONE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [not null, default: false]
  user User [not null]
  userId String [not null]
  test Test [not null]
  testId String [not null]
}

Table Vocabulary {
  id String [pk]
  word String [unique, not null]
  meaning String [not null]
}

Table Feedback {
  id String [pk]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [not null, default: false]
  user User [not null]
  userId String [not null]
  test Test
  testId String [unique]
}

Table Favorite {
  id String [pk]
  note String
  user User [not null]
  userId String [not null]
  test Test
  testId String [unique]
}

Enum Role {
  ADMIN
  USER
}

Enum AttemptStatus {
  NONE
  INPROGRESS
  FINISHED
  ABANDONED
}

Enum TestCategory {
  PART1
  PART2
  PART3
  PART4
  PART5
  PART6
  PART7
  FULLTEST
}

Enum TestSkill {
  LISTENING
  READING
}

Ref: Config.userId - User.id

Ref: Test.testSourceId > TestSource.id

Ref: Attempt.userId > User.id

Ref: Attempt.testId > Test.id

Ref: Feedback.userId > User.id

Ref: Feedback.testId - Test.id

Ref: Favorite.userId > User.id

Ref: Favorite.testId - Test.id